# lf-flexpret

./: .gitignore  .gitmodules  README.md  config.mk  env.bash  env.fish
bugs/jump_to_start/: Core.vcd  jump.dump.txt  jump_to_start.c
bugs/misaligned_load_exception/jump_to_start/: Core.vcd  imem.hex.txt  jump
bugs/misaligned_load_exception/prints_wrong_value/: prints_0x4e.c
bugs/misaligned_load_exception/prints_wrong_value/2_becomes_4e/: bug.dump.txt
bugs/misaligned_load_exception/two_consecutive_load/: minimal.c
bugs/misaligned_load_exception/two_consecutive_load/single_load/: Core.vcd  minimal.dump.txt
bugs/prints_wrong_value/2_becomes_4e/: Core.vcd
bugs/single_load/: Core.vcd  imem.hex.txt  minimal  minimal.c
bugs/two_consecutive_load/: Core.vcd  imem.hex.txt  minimal  minimal.dump.txt
bugs/two_consecutive_load_asm_failure/: Core.vcd  imem.hex.txt  minimal  minimal.dump.txt  minimal_asm.c
bugs/two_consecutive_load_asm_success/: Core.vcd  minimal
bugs/two_consecutive_load_w_manual_asm/: Core.vcd  imem.hex.txt  minimal  minimal.dump.txt  minimal_asm.c
demonstrator/arduino/AccelStepper_test/: AccelStepper_test.ino
demonstrator/arduino/FastAccelStepper_test/: FastAccelStepper_test.ino
demonstrator/arduino/toggle_gpio/: stepper_motor_example1.ino
demonstrator/pynq-z1/led-test/: led.c
docker/: Dockerfile  Dockerfile-base  README.md  chisel3.Dockerfile  lf_riscv.Dockerfile
examples/: .gitignore
examples/c/bugs/call_li_twice/: README.md
examples/c/bugs/call_li_twice_with_csrw/: minimal.c
examples/c/bugs/two_consecutive_load/: minimal.c  minimal_asm.c
examples/c/bugs/two_consecutive_load_w_manual_asm/: minimal_asm.c
examples/c/fib/: fib.c
examples/c/hello/: hello.c  hello_no_print.c  hello_no_print_2.c  hello_wrong_number.c
examples/c/malloc/: malloc.c
lf/Minimal/: Minimal.lf  lf_embedded_flexpret_support.c  start.S
lf/Minimal/src-gen-cpy/Minimal/: CMakeLists.txt  Minimal.c  rebuild.sh
lf/Minimal/src-gen-cpy/Minimal/core/: platform.h
lf/Minimal/src-gen-cpy/Minimal/core/platform/: Platform.cmake
lf/Minimal/src-gen-cpy/Minimal_no_cmake/: Minimal  Minimal.c  Minimal.dump.txt  Minimal.hex  Minimal.hex.vcd  lf_embedded_flexpret_support.c  lf_embedded_flexpret_support.h  rebuild.sh
lf/Minimal/src-gen/Minimal/: CMakeLists.txt
lf/Time/: Time.lf
lf/Time/src-gen-fp/Time/: Time.c  output.map  start.S  (+2 more)
lf/create_reactor/: Minimal.c  lf_embedded_flexpret_support.c  lf_embedded_flexpret_support.h  rebuild.sh
lf/create_reactor/core/: reactor_common.c
platform/: lf_flexpret_support.c  lf_flexpret_support.h  platform.h  reactor.c  reactor_common.c  tag.c
platform/linker/: default.ld
programs/lib/: start.S  startup.c  sync.S  threading.c
programs/lib/include/: flexpret_sync.h
scripts/: .run-sim.sh.swp  build_flexpret_unix.sh  compile-and-parse.sh  compile.sh  run-sim.sh
scripts/c/: riscv_compile.sh
src/: Interrupts.lf  Minimal.lf  PhysicalActionInterrupts.lf  ScatterGather.lf  Test.lf  TestAction.lf  TestTimer.lf  Timer.lf  UART.lf
(+18 files in other folders)
